# zhku_c_homework

./: CLAUDE.md  CMakeLists.txt  fish_farm_data.txt  main.c  records.txt  species.txt.txt  users.txt
docs/: 各个程序模块之间的层次关系.drawio
lib/: array_list.c  array_list.h  collection_type_ptr.c  collection_type_ptr.h
proj/: console.c  console.h  data.c  data.h  data_restriction.c  data_restriction.h  io.c  io.h  sort.c  sort.h  statistics.c  statistics.h  user_management.c  user_management.h  water_warning.c  water_warning.h
